k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: velero-manager
  labels:
    app: velero-manager
